# ukr_numbers

./: README.md  pyproject.toml
src/ukr_numbers/: __main__.py  nums.py
tests/test_ukr_numbers/: test_nums.py
